// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be controlled 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title"
      >
        Hello
      </h1>
      <button
        class="IconButton IconButton--muted"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton__inner"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--primary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
            />
          </svg>
          <span
            class="IconButton__label"
          >
            Close
          </span>
        </span>
      </button>
    </div>
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
    <div
      class="ModalControls"
      data-test-id="cf-ui-modal-controls"
    >
      <button
        type="button"
      >
        Click on me
      </button>
    </div>
  </div>
</div>
`;

exports[`can override header and content properties 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader additional-header-class"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title ModalHeader__title--is-not-wrapped"
      >
        Hello!
      </h1>
      <button
        class="IconButton IconButton--muted"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton__inner"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--primary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
            />
          </svg>
          <span
            class="IconButton__label"
          >
            Close
          </span>
        </span>
      </button>
    </div>
    <div
      class="ModalContent additional-content-class"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title"
      >
        Title
      </h1>
      <button
        class="IconButton IconButton--muted"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton__inner"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--primary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
          >
            <path
              d="M14.0303 5.03033C14.3232 4.73744 14.3232 4.26256 14.0303 3.96967C13.7374 3.67678 13.2626 3.67678 12.9697 3.96967L9 7.93934L5.03033 3.96967C4.73744 3.67678 4.26256 3.67678 3.96967 3.96967C3.67678 4.26256 3.67678 4.73744 3.96967 5.03033L7.93934 9L3.96967 12.9697C3.67678 13.2626 3.67678 13.7374 3.96967 14.0303C4.26256 14.3232 4.73744 14.3232 5.03033 14.0303L9 10.0607L12.9697 14.0303C13.2626 14.3232 13.7374 14.3232 14.0303 14.0303C14.3232 13.7374 14.3232 13.2626 14.0303 12.9697L10.0607 9L14.0303 5.03033Z"
            />
          </svg>
          <span
            class="IconButton__label"
          >
            Close
          </span>
        </span>
      </button>
    </div>
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders the component without title 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;
